--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
 <!doctype html>
-<html lang="pt-PT">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>The Impostor — Clash Royale (versão actualizada)</title>
+  <title>The Impostor — Clash Royale (All cards)</title>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;margin:0;background:#0b1020;color:#e6eef8;display:flex;align-items:flex-start;justify-content:center;padding:24px}
-    .card{background:#0f1724;border:1px solid rgba(255,255,255,0.04);padding:18px;border-radius:8px;max-width:900px;width:100%}
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial; margin:0;
+      background:#0b1020;color:#e6eef8;display:flex;align-items:flex-start;justify-content:center;padding:24px }
+    .card{background:#0f1724;border:1px solid rgba(255,255,255,0.04);padding:18px;border-radius:8px;max-width:1100px;width:100%}
     h1{margin:0 0 12px;font-size:20px}
     .controls{display:flex;gap:8px;flex-wrap:wrap;margin-bottom:12px}
     label{font-size:13px}
     input[type=number]{width:68px;padding:6px;border-radius:6px;border:1px solid rgba(255,255,255,0.06);background:#071029;color:inherit}
     button{background:#1f8feb;border:none;padding:8px 12px;border-radius:6px;color:white;cursor:pointer}
     button.secondary{background:transparent;border:1px solid rgba(255,255,255,0.06)}
-    .players{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:10px;margin-top:14px}
-    .player{background:#071328;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.02);text-align:center}
-    .role{margin-top:8px;padding:8px;background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent);border-radius:6px}
-    .hidden{filter:blur(2px);}
+    .players{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin-top:14px}
+    .player{background:#071328;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.02);text-align:center;position:relative}
+    .role{margin-top:8px;padding:8px;background:#111c2f;border-radius:6px;cursor:pointer;position:relative;overflow:hidden;min-height:120px;display:flex;align-items:center;justify-content:center;flex-direction:column}
+    .hidden::before{content:"Click to reveal your role";position:absolute;inset:0;background:#091426;color:#e6eef8;display:flex;align-items:center;justify-content:center;font-weight:700;letter-spacing:0.4px}
+    .hidden.impostor::before{content:"Click to reveal your role (Impostor)";}
+    .role.revealed{background:#0e1c34}
+    .card-image{width:110px;height:110px;object-fit:contain;border-radius:6px;border:1px solid rgba(255,255,255,0.08);background:#0b1020;margin-top:8px}
     .footer{margin-top:12px;font-size:13px;color:#bcd9ff}
     .small{font-size:12px;color:#a7c3e6}
-    textarea{width:100%;height:80px;background:#071029;color:inherit;border:1px solid rgba(255,255,255,0.04);padding:8px;border-radius:6px}
+    @media (max-width:600px){ .card-image{width:88px;height:88px} .players{grid-template-columns:1fr} }
   </style>
 </head>
 <body>
   <div class="card">
-    <h1>The Impostor — Clash Royale</h1>
+    <h1>The Impostor — Clash Royale (All cards)</h1>
+
     <div class="controls">
       <div>
-        <label>Quantidade de jogadores (4–15)</label><br>
+        <label>Number of players (4–15)</label><br>
         <input id="numPlayers" type="number" min="4" max="15" value="6">
       </div>
       <div>
-        <label>Quantidade de impostores (0–2)</label><br>
+        <label>Number of impostors (0–2)</label><br>
         <input id="numImpostors" type="number" min="0" max="2" value="1">
       </div>
       <div style="align-self:end">
-        <button id="startBtn">Iniciar jogo</button>
-        <button id="resetBtn" class="secondary">Reiniciar</button>
+        <button id="startBtn">Start game</button>
+        <button id="resetBtn" class="secondary">Reset</button>
       </div>
     </div>
 
-    <div class="small">Pool de cartas do Clash Royale (todas as cartas incluídas automaticamente).</div>
-    <textarea id="cardPool" style="display:none"></textarea>
-
+    <div class="small">Clash Royale card pool — large built-in list with images (CDN).</div>
     <div id="playersArea" class="players"></div>
 
     <div class="footer">
-      <div id="status">Pronto. Ajusta as opções e clica "Iniciar jogo".</div>
+      <div id="status">Ready. Adjust the options and click "Start game".</div>
     </div>
   </div>
 
@@ -58,9 +61,140 @@
     const numPlayersInput = document.getElementById('numPlayers');
     const numImpostorsInput = document.getElementById('numImpostors');
 
+    // --- Full card list (names + image slugs) ---
+    // Images use RoyaleAPI CDN pattern: https://cdn.royaleapi.com/static/img/cards-150/<slug>.png
+    // If alguma imagem estiver quebrada, indica-me o nome da carta para ajustar o slug.
     const allCards = [
-      'Arqueiras','Bárbaros','Gigante','Mago','Mini P.E.K.K.A','Mosqueteira','Valquíria','Feiticeiro','Bruxa','Corredor','Lenhador','Príncipe','Príncipe das Trevas','Cavaleiro','Golem','Golem de Gelo','Dragão Bebé','Dragão Infernal','Mago de Gelo','Mago Eléctrico','Mago de Fogo','Aríete de Batalha','Carrinho de Canhão','Máquina Voadora','Carrinho de Artilharia','Lenhador','Pescador','Bruxa Sombria','Guardiãs','Caçador','Lápide','Torre Infernal','Torre Tesla','Canhão','Fornalha','Cabana de Goblins','Cabana de Bárbaros','Espírito de Gelo','Espírito de Fogo','Espírito Eléctrico','Goblins','Goblins Lanceiros','Goblin Gigante','Goblin com Dardo','Barril de Goblins','Gigante Real','Rei Esqueleto','Rainha Arqueira','Cavaleiro Dourado','Campeão Mineiro','Mega Servo','Servos','Horda de Servos','Exército de Esqueletos','Esqueletos','Bombardeiro','Balão','Morteiro','X-Besta','Três Mosqueteiras','Lançador','Executor','Fantasma Real','Bebé Dragão','Fênix','Fogueira','Foguete','Bola de Fogo','Relâmpago','Veneno','Tornado','Raio','Descarga','Clone','Fúria','Espelho','Barril de Bárbaros','Barril de Esqueletos','Barril de Goblins','Mineiro','Mineiro Bombado','Cemitério','Lava Hound','Balão de Lava','Mega Cavaleiro','Campeão Rei Esqueleto','Rainha Arqueira','Cavaleiro Dourado','Campeão Mineiro','Monge','Mãe Bruxa','Eletrocutadores','Eletrogigante','Gigante Esqueleto','Gigante Elétrico','Carrinho de Canhão','Carrinho de Artilharia','Máquina Voadora','Carrinho de Artilharia','Príncipe das Trevas','Guardiãs','Caçador','Fornalha','Cemitério','Clone','Espelho','Espírito Elétrico','Espírito de Cura','Espírito de Fogo','Espírito de Gelo','Torre Infernal','Torre Tesla','Canhão','Cabana de Bárbaros','Cabana de Goblins'
+      {name:"Archers", slug:"archers"},
+      {name:"Knight", slug:"knight"},
+      {name:"Spear Goblins", slug:"spear-goblins"},
+      {name:"Bomber", slug:"bomber"},
+      {name:"Minions", slug:"minions"},
+      {name:"Minion Horde", slug:"minion-horde"},
+      {name:"Goblins", slug:"goblins"},
+      {name:"Goblin Barrel", slug:"goblin-barrel"},
+      {name:"Goblin Gang", slug:"goblin-gang"},
+      {name:"Goblin Cage", slug:"goblin-cage"},
+      {name:"Skeletons", slug:"skeletons"},
+      {name:"Skeleton Army", slug:"skeleton-army"},
+      {name:"Bats", slug:"bats"},
+      {name:"Ice Spirit", slug:"ice-spirit"},
+      {name:"Fire Spirit", slug:"fire-spirit"},
+      {name:"Zap", slug:"zap"},
+      {name:"The Log", slug:"the-log"},
+      {name:"Arrows", slug:"arrows"},
+      {name:"Rocket", slug:"rocket"},
+      {name:"Fireball", slug:"fireball"},
+      {name:"Poison", slug:"poison"},
+      {name:"Lightning", slug:"lightning"},
+      {name:"Tornado", slug:"tornado"},
+      {name:"Freeze", slug:"freeze"},
+      {name:"Rage", slug:"rage"},
+      {name:"Heal Spirit", slug:"heal-spirit"},
+      {name:"Clone", slug:"clone"},
+      {name:"Mirror", slug:"mirror"},
+      {name:"Graveyard", slug:"graveyard"},
+      {name:"Miner", slug:"miner"},
+      {name:"Hog Rider", slug:"hog-rider"},
+      {name:"Balloon", slug:"balloon"},
+      {name:"Giant", slug:"giant"},
+      {name:"Royal Giant", slug:"royal-giant"},
+      {name:"Goblin Giant", slug:"goblin-giant"},
+      {name:"Giant Skeleton", slug:"giant-skeleton"},
+      {name:"Lava Hound", slug:"lava-hound"},
+      {name:"Mega Minion", slug:"mega-minion"},
+      {name:"Minion Horde", slug:"minion-horde"},
+      {name:"Baby Dragon", slug:"baby-dragon"},
+      {name:"Electro Dragon", slug:"electro-dragon"},
+      {name:"Inferno Dragon", slug:"inferno-dragon"},
+      {name:"Dragon", slug:"dragon"},
+      {name:"P.E.K.K.A", slug:"pekka"},
+      {name:"Prince", slug:"prince"},
+      {name:"Dark Prince", slug:"dark-prince"},
+      {name:"Cavalry", slug:"cavalry"},
+      {name:"Mini P.E.K.K.A", slug:"mini-pekka"},
+      {name:"Valkyrie", slug:"valkyrie"},
+      {name:"Wizard", slug:"wizard"},
+      {name:"Musketeer", slug:"musketeer"},
+      {name:"Electro Wizard", slug:"electro-wizard"},
+      {name:"Magic Archer", slug:"magic-archer"},
+      {name:"Bandit", slug:"bandit"},
+      {name:"Battle Ram", slug:"battle-ram"},
+      {name:"Ram Rider", slug:"ram-rider"},
+      {name:"Skeleton Barrel", slug:"skeleton-barrel"},
+      {name:"Skeleton Dragons", slug:"skeleton-dragons"},
+      {name:"Skeleton King", slug:"skeleton-king"},
+      {name:"Witch", slug:"witch"},
+      {name:"Night Witch", slug:"night-witch"},
+      {name:"Mother Witch", slug:"mother-witch"},
+      {name:"Fisherman", slug:"fisherman"},
+      {name:"Hunter", slug:"hunter"},
+      {name:"Executioner", slug:"executioner"},
+      {name:"Bowler", slug:"bowler"},
+      {name:"Bomber", slug:"bomber"},
+      {name:"Cannon Cart", slug:"cannon-cart"},
+      {name:"Flying Machine", slug:"flying-machine"},
+      {name:"Mighty Miner", slug:"mighty-miner"},
+      {name:"Monk", slug:"monk"},
+      {name:"Royal Hogs", slug:"royal-hogs"},
+      {name:"Royal Recruits", slug:"royal-recruits"},
+      {name:"Three Musketeers", slug:"three-musketeers"},
+      {name:"Prince of Darkness", slug:"dark-prince"}, // alias
+      {name:"Electro Spirit", slug:"electro-spirit"},
+      {name:"Heal Spirit", slug:"heal-spirit"},
+      {name:"Cannon", slug:"cannon"},
+      {name:"Mortar", slug:"mortar"},
+      {name:"Tesla", slug:"tesla"},
+      {name:"Inferno Tower", slug:"inferno-tower"},
+      {name:"X-Bow", slug:"x-bow"},
+      {name:"Bomb Tower", slug:"bomb-tower"},
+      {name:"Tombstone", slug:"tombstone"},
+      {name:"Goblin Hut", slug:"goblin-hut"},
+      {name:"Barbarian Hut", slug:"barbarian-hut"},
+      {name:"Furnace", slug:"furnace"},
+      {name:"Elixir Collector", slug:"elixir-collector"},
+      {name:"Princess", slug:"princess"},
+      {name:"Ice Wizard", slug:"ice-wizard"},
+      {name:"Bandit", slug:"bandit"},
+      {name:"Dark Prince", slug:"dark-prince"},
+      {name:"Royal Delivery", slug:"royal-delivery"},
+      {name:"Skeleton King", slug:"skeleton-king"},
+      {name:"Golden Knight", slug:"golden-knight"},
+      {name:"Magic Archer", slug:"magic-archer"},
+      {name:"Mother Witch", slug:"mother-witch"},
+      {name:"Night Witch", slug:"night-witch"},
+      {name:"Phoenix", slug:"phoenix"},
+      {name:"Spirit Empress", slug:"spirit-empress"},
+      {name:"Mega Knight", slug:"mega-knight"},
+      {name:"Mega Minion", slug:"mega-minion"},
+      {name:"Electro Giant", slug:"electro-giant"},
+      {name:"Ram Rider", slug:"ram-rider"},
+      {name:"Royal Ghost", slug:"royal-ghost"},
+      {name:"Zappies", slug:"zappies"},
+      {name:"Barbarian Barrel", slug:"barbarian-barrel"},
+      {name:"Skeleton Barrel", slug:"skeleton-barrel"},
+      {name:"Wall Breakers", slug:"wall-breakers"},
+      {name:"Heal", slug:"heal"}, // some older/alias names
+      {name:"Tornado", slug:"tornado"},
+      {name:"The Log", slug:"the-log"},
+      {name:"Earthquake", slug:"earthquake"},
+      {name:"Giant Snowball", slug:"giant-snowball"},
+      {name:"Royal Champion", slug:"royal-champion"},
+      {name:"Dart Goblin", slug:"dart-goblin"},
+      {name:"Furnace", slug:"furnace"},
+      {name:"Skeletons", slug:"skeletons"},
+      {name:"Sparky", slug:"sparky"},
+      {name:"Electro Spirit", slug:"electro-spirit"},
+      {name:"Heal Spirit", slug:"heal-spirit"},
+      {name:"Elixir Golem", slug:"elixir-golem"},
+      {name:"Battle Healer", slug:"battle-healer"},
+      {name:"Magic Archer", slug:"magic-archer"}
     ];
+
+    // Build full image URL from slug; fallback image as transparent placeholder if missing
+    function cardImageUrl(slug){
+      return `https://cdn.royaleapi.com/static/img/cards-150/${slug}.png`;
+    }
 
     function shuffle(array){
       for(let i=array.length-1;i>0;i--){
@@ -72,59 +206,83 @@
     function startGame(){
       const numPlayers = parseInt(numPlayersInput.value,10);
       let numImpostors = parseInt(numImpostorsInput.value,10);
-      if(isNaN(numPlayers) || numPlayers<4 || numPlayers>15){ alert('Define um número de jogadores entre 4 e 15.'); return; }
+      if(isNaN(numPlayers) || numPlayers<4 || numPlayers>15){ alert('Set a number of players between 4 and 15.'); return; }
       if(isNaN(numImpostors) || numImpostors<0) numImpostors=0;
       if(numImpostors>2) numImpostors=2;
       if(numImpostors>=numPlayers) numImpostors=1;
 
-      let pool = [...new Set(allCards)];
+      // Clone pool and shuffle; choose one card for all non-impostors
+      const pool = [...allCards];
       shuffle(pool);
-      const chosenCard = pool[0]; // todos os jogadores têm esta carta
+      const chosen = pool[0];
 
       const indices = [...Array(numPlayers).keys()];
       shuffle(indices);
       const impostorIndices = indices.slice(0,numImpostors);
 
       playersArea.innerHTML='';
+      let currentPlayer = 0;
+      let revealed = false;
+
       for(let i=0;i<numPlayers;i++){
         const div = document.createElement('div');
         div.className='player';
-        div.innerHTML = `<div><strong>Jogador ${i+1}</strong></div>`;
+        div.innerHTML = `<div><strong>Player ${i+1}</strong></div>`;
 
         const roleDiv = document.createElement('div');
-        roleDiv.className='role hidden';
-        const isImpostor = impostorIndices.indexOf(i)!==-1;
-
-        if(isImpostor){
-          roleDiv.dataset.text = `IMPOSTOR\nNão tens carta!\nFinge saber a carta.`;
-          roleDiv.textContent = 'Clica para ver o teu papel (Impostor)';
-        } else {
-          roleDiv.dataset.text = `PLAYER\nCarta: ${chosenCard}`;
-          roleDiv.textContent = 'Clica para ver o teu papel';
-        }
+        const isImpostor = impostorIndices.includes(i);
+        roleDiv.className = 'role hidden' + (isImpostor ? ' impostor' : '');
 
         roleDiv.addEventListener('click', ()=>{
-          if(roleDiv.classList.contains('hidden')){
-            roleDiv.classList.remove('hidden');
-            roleDiv.textContent = roleDiv.dataset.text;
-          } else {
+          if(i !== currentPlayer) return; // only current player can click
+
+          if(revealed){
+            // close current
             roleDiv.classList.add('hidden');
-            roleDiv.textContent = isImpostor? 'Clica para ver o teu papel (Impostor)' : 'Clica para ver o teu papel';
+            roleDiv.classList.remove('revealed');
+            roleDiv.innerHTML = ''; // reset
+            revealed = false;
+            currentPlayer++;
+            if(currentPlayer < numPlayers){
+              status.textContent = `Player ${currentPlayer + 1}, it's your turn.`;
+            } else {
+              status.textContent = `All players have seen their roles.`;
+            }
+            return;
           }
+
+          // reveal
+          roleDiv.classList.remove('hidden');
+          roleDiv.classList.add('revealed');
+          if(isImpostor){
+            roleDiv.innerHTML = `<strong>IMPOSTOR</strong><br><small>You have no card. Bluff!</small>`;
+          } else {
+            const img = document.createElement('img');
+            img.className = 'card-image';
+            img.alt = chosen.name;
+            img.src = cardImageUrl(chosen.slug);
+            // if image fails, show name only
+            img.onerror = ()=>{ img.style.display='none'; };
+            roleDiv.innerHTML = `<strong>${chosen.name}</strong>`;
+            roleDiv.appendChild(img);
+          }
+          revealed = true;
         });
 
         div.appendChild(roleDiv);
         playersArea.appendChild(div);
       }
 
-      status.textContent = `Jogo iniciado com ${numPlayers} jogadores e ${numImpostors} impostor(es). Carta seleccionada: ${chosenCard}. Cada jogador clica na sua caixa para ver o papel.`;
+      status.textContent = `Player 1, it's your turn.`;
     }
 
     startBtn.addEventListener('click', startGame);
     resetBtn.addEventListener('click', ()=>{
       playersArea.innerHTML='';
-      status.textContent='Pronto. Ajusta as opções e clica "Iniciar jogo".';
+      status.textContent='Ready. Adjust the options and click "Start game".';
     });
   </script>
 </body>
 </html>
+
+
